--- a/views/padrinhos.ejs
+++ b/views/padrinhos.ejs
@@ -7,11 +7,11 @@
 
    <div class="container">
     <div class="row">
-      <div class="col">
+      <div class="col" id="col1">
         <!---->
         <div class="card" style="width: 18rem;" id="felipe">
           <img src="/img/sandro.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
+          <div class="card-body-1">
             <h5 class="card-title">Sandro</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
           </div>
@@ -19,7 +19,7 @@
         <!---->
         <div class="card" style="width: 18rem;" id="felipe">
           <img src="/img/felipe-lilian.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
+          <div class="card-body-1">
             <h5 class="card-title">Felipe</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
           </div>
@@ -27,7 +27,7 @@
         <!---->
         <div class="card" style="width: 18rem;" id="felipe">
           <img src="/img/felipe.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
+          <div class="card-body-1">
             <h5 class="card-title">Felipe</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
           </div>
@@ -35,7 +35,7 @@
         <!---->
         <div class="card" style="width: 18rem;" id="felipe">
           <img src="/img/kaique.jfif" class="card-img-top" alt="...">
-          <div class="card-body">
+          <div class="card-body-1">
             <h5 class="card-title">Kaique</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
           </div>
@@ -44,7 +44,7 @@
         <!---->
         <div class="card" style="width: 18rem;" id="felipe">
           <img src="/img/marks.jpeg" class="card-img-top" alt="...">
-          <div class="card-body">
+          <div class="card-body-1">
             <h5 class="card-title">Marks</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
           </div>
@@ -53,7 +53,7 @@
          <!---->
          <div class="card" style="width: 18rem;" id="felipe">
           <img src="/img/antoni.jpeg" class="card-img-top" alt="...">
-          <div class="card-body">
+          <div class="card-body-1">
             <h5 class="card-title">Anthony</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
           </div>
@@ -62,7 +62,7 @@
          <!---->
          <div class="card" style="width: 18rem;" id="felipe">
           <img src="/img/marisamarido.jpeg" class="card-img-top" alt="...">
-          <div class="card-body">
+          <div class="card-body-1">
             <h5 class="card-title">Altair</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
           </div>
@@ -71,7 +71,7 @@
         <!---->
         <div class="card" style="width: 18rem;" id="felipe">
           <img src="/img/ruthmarido.jpeg" class="card-img-top" alt="...">
-          <div class="card-body">
+          <div class="card-body-1">
             <h5 class="card-title">Luiz</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
           </div>
@@ -79,16 +79,18 @@
         <!---->
        
       </div>
-      <div class="col">
+      <div class="col" id="col2">
 
-         
+         <div class="tituloPadrinhos">
+           <h1>Padrinhos e Madrinhas</h1>
+         </div>
         
       </div>
-      <div class="col">
+      <div class="col" id="col3">
         <!---->
         <div class="card" style="width: 18rem;" id="felipe">
           <img src="/img/nanda.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
+          <div class="card-body-2">
             <h5 class="card-title">Fernanda</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
           </div>
@@ -96,7 +98,7 @@
         <!---->
         <div class="card" style="width: 18rem;" id="felipe">
           <img src="/img/kamila.jpeg" class="card-img-top" alt="...">
-          <div class="card-body">
+          <div class="card-body-2">
             <h5 class="card-title">Kamila</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
           </div>
@@ -104,7 +106,7 @@
         <!---->
         <div class="card" style="width: 18rem;" id="felipe">
           <img src="/img/patricia.jpeg" class="card-img-top" alt="...">
-          <div class="card-body">
+          <div class="card-body-2">
             <h5 class="card-title">Patricia</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
           </div>
@@ -112,7 +114,7 @@
         <!---->
         <div class="card" style="width: 18rem;" id="felipe">
           <img src="/img/cintia.jpeg" class="card-img-top" alt="...">
-          <div class="card-body">
+          <div class="card-body-2">
             <h5 class="card-title">Cintia</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
           </div>
@@ -121,7 +123,7 @@
         <!---->
         <div class="card" style="width: 18rem;" id="felipe">
           <img src="/img/eduarda.jpeg" class="card-img-top" alt="...">
-          <div class="card-body">
+          <div class="card-body-2">
             <h5 class="card-title">Eduarda</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
           </div>
@@ -130,7 +132,7 @@
         <!---->
         <div class="card" style="width: 18rem;" id="felipe">
           <img src="/img/ana.jpeg" class="card-img-top" alt="...">
-          <div class="card-body">
+          <div class="card-body-2">
             <h5 class="card-title">Ana</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
           </div>
@@ -139,7 +141,7 @@
         <!---->
         <div class="card" style="width: 18rem;" id="felipe">
           <img src="/img/marisa.jpeg" class="card-img-top" alt="...">
-          <div class="card-body">
+          <div class="card-body-2">
             <h5 class="card-title">Marisa</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
           </div>
@@ -148,7 +150,7 @@
         <!---->
         <div class="card" style="width: 18rem;" id="felipe">
           <img src="/img/ruth.jpeg" class="card-img-top" alt="...">
-          <div class="card-body">
+          <div class="card-body-2">
             <h5 class="card-title">Ruth</h5>
             <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
           </div>
