--- a/views/padrinhos.ejs
+++ b/views/padrinhos.ejs
@@ -13,7 +13,7 @@
           <img src="/img/sandro.jpg" class="card-img-top" alt="...">
           <div class="card-body-1">
             <h5 class="card-title">Sandro</h5>
-            <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Escreva sua mensagem aqui ou fale um pouco mais de você</p>
           </div>
         </div>
         <!---->
@@ -21,7 +21,7 @@
           <img src="/img/felipe-lilian.jpg" class="card-img-top" alt="...">
           <div class="card-body-1">
             <h5 class="card-title">Felipe</h5>
-            <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Escreva sua mensagem aqui ou fale um pouco mais de você</p>
           </div>
         </div>
         <!---->
@@ -29,7 +29,7 @@
           <img src="/img/felipe.jpg" class="card-img-top" alt="...">
           <div class="card-body-1">
             <h5 class="card-title">Felipe</h5>
-            <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">bEscreva sua mensagem aqui ou fale um pouco mais de você</p>
           </div>
         </div>
         <!---->
@@ -37,7 +37,7 @@
           <img src="/img/kaique.jfif" class="card-img-top" alt="...">
           <div class="card-body-1">
             <h5 class="card-title">Kaique</h5>
-            <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Escreva sua mensagem aqui ou fale um pouco mais de você</p>
           </div>
         </div>
         <!---->
@@ -46,7 +46,7 @@
           <img src="/img/marks.jpeg" class="card-img-top" alt="...">
           <div class="card-body-1">
             <h5 class="card-title">Marks</h5>
-            <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Escreva sua mensagem aqui ou fale um pouco mais de você</p>
           </div>
         </div>
         <!---->
@@ -55,7 +55,7 @@
           <img src="/img/antoni.jpeg" class="card-img-top" alt="...">
           <div class="card-body-1">
             <h5 class="card-title">Anthony</h5>
-            <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Escreva sua mensagem aqui ou fale um pouco mais de você</p>
           </div>
         </div>
         <!---->
@@ -64,7 +64,7 @@
           <img src="/img/marisamarido.jpeg" class="card-img-top" alt="...">
           <div class="card-body-1">
             <h5 class="card-title">Altair</h5>
-            <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Escreva sua mensagem aqui ou fale um pouco mais de você</p>
           </div>
         </div>
         <!---->
@@ -73,7 +73,7 @@
           <img src="/img/ruthmarido.jpeg" class="card-img-top" alt="...">
           <div class="card-body-1">
             <h5 class="card-title">Luiz</h5>
-            <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Escreva sua mensagem aqui ou fale um pouco mais de você</p>
           </div>
         </div>
         <!---->
@@ -92,7 +92,7 @@
           <img src="/img/nanda.jpg" class="card-img-top" alt="...">
           <div class="card-body-2">
             <h5 class="card-title">Fernanda</h5>
-            <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Escreva sua mensagem aqui ou fale um pouco mais de você</p>
           </div>
         </div>
         <!---->
@@ -100,7 +100,7 @@
           <img src="/img/kamila.jpeg" class="card-img-top" alt="...">
           <div class="card-body-2">
             <h5 class="card-title">Kamila</h5>
-            <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Escreva sua mensagem aqui ou fale um pouco mais de você</p>
           </div>
         </div>
         <!---->
@@ -108,7 +108,7 @@
           <img src="/img/patricia.jpeg" class="card-img-top" alt="...">
           <div class="card-body-2">
             <h5 class="card-title">Patricia</h5>
-            <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Escreva sua mensagem aqui ou fale um pouco mais de você</p>
           </div>
         </div>
         <!---->
@@ -116,7 +116,7 @@
           <img src="/img/cintia.jpeg" class="card-img-top" alt="...">
           <div class="card-body-2">
             <h5 class="card-title">Cintia</h5>
-            <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Escreva sua mensagem aqui ou fale um pouco mais de você</p>
           </div>
         </div>
         <!---->
@@ -125,7 +125,7 @@
           <img src="/img/eduarda.jpeg" class="card-img-top" alt="...">
           <div class="card-body-2">
             <h5 class="card-title">Eduarda</h5>
-            <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Escreva sua mensagem aqui ou fale um pouco mais de você</p>
           </div>
         </div>
         <!---->
@@ -134,7 +134,7 @@
           <img src="/img/ana.jpeg" class="card-img-top" alt="...">
           <div class="card-body-2">
             <h5 class="card-title">Ana</h5>
-            <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Escreva sua mensagem aqui ou fale um pouco mais de você</p>
           </div>
         </div>
         <!---->
@@ -143,7 +143,7 @@
           <img src="/img/marisa.jpeg" class="card-img-top" alt="...">
           <div class="card-body-2">
             <h5 class="card-title">Marisa</h5>
-            <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Escreva sua mensagem aqui ou fale um pouco mais de você</p>
           </div>
         </div>
         <!---->
@@ -152,7 +152,7 @@
           <img src="/img/ruth.jpeg" class="card-img-top" alt="...">
           <div class="card-body-2">
             <h5 class="card-title">Ruth</h5>
-            <p class="card-text">build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text">Escreva sua mensagem aqui ou fale um pouco mais de você</p>
           </div>
         </div>
         <!---->
