--- a/public/css/newLook.css
+++ b/public/css/newLook.css
@@ -327,7 +327,7 @@ label[for="bt_menu"]{
 }
 
 .tituloPadrinhos{
-    background-color: #31408f;
+    background-color: rgba(0, 0, 0, 0.4);
     margin: 15px;
     border-radius: 10px;
     padding: 15px;
