--- a/public/css/newLook.css
+++ b/public/css/newLook.css
@@ -371,11 +371,11 @@ label[for="bt_menu"]{
     
 }
 
-.painelContribua{
+.centerContribua{
     width: 500px;
     text-align: center;
     float: left;
-    margin: 10px;
+    margin-top: 10px;
+    margin-left: 50px;
 }
-
 /* FIM CONTRIBUA */
