--- a/views/festa.ejs
+++ b/views/festa.ejs
@@ -18,16 +18,15 @@
     <h1>SPAZIO CASANOSTRA</h1>
 
     <p>
+        
+      Estamos felizes em poder nos reunir com vocês no Spazio Casa Nostra, 
+      e esperamos que todos possam comparecer e desfrutar conosco do dia mais feliz das nossas vidas. 
 
-        What is Lorem Ipsum?
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-        when an unknown printer took a galley of type and scrambled it to make a type 
-        specimen book. It has survived not only five centuries, but also the leap into 
-        electronic typesetting, remaining essentially unchanged. It was popularised in 
-        the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-        and more recently with desktop publishing software like Aldus PageMaker 
-        including versions of Lorem Ipsum.
+      Cada detalhe foi pensado para proporcionar aos nossos convidados uma experiência agradável 
+      e que renda boas lembranças. 
+      
+      Teremos uma cabine de fotos para que você convidado possa ter uma recordação deste dia especial.
+      Sua presença é muito importante para nós!
 
     </p>
 
