--- a/views/viagem.ejs
+++ b/views/viagem.ejs
@@ -15,22 +15,23 @@
 
       <p class="pViagem">
 
-        What is Lorem Ipsum?
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-        when an unknown printer took a galley of type and scrambled it to make a type 
-        specimen book. It has survived not only five centuries, but also the leap into 
-        electronic typesetting, remaining essentially unchanged. 
+                
+        Paris é chamada de cidade Luz e é considerada uma das cidades mais românticas do mundo. 
+        Iremos realizar um sonho, estamos gratos pelo privilégio de passar a nossa lua de mel 
+        em um lugar tão mágico. 
 
     </p>
 
     <p class="pViagem">
 
-        What is Lorem Ipsum?
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-        when an unknown printer took a galley of type and scrambled it to make a type 
-        specimen book. 
+              
+        Toda realização de um sonho exige sacrifícios, mas é isto que faz valer a pena. 
+        Não foi fácil para chegar até aqui, muitos vão pensar que se trata de sorte, porém 
+        nada disso seria possível sem renúncia. 
+
+        Sonhe, pois tudo é possível. Tudo que envolve empenho, dedicação e vontade tem 
+        chances de se realizar. E sonho que se sonha junto, torna-se realidade. 
+        Viajar é colecionar memórias que ficarão eternizadas no coração.
 
     </p>
 
