--- a/public/css/newLook2.css
+++ b/public/css/newLook2.css
@@ -213,7 +213,6 @@ label[for="bt_menu"]{
     margin: 5px;
     width: 400px;
     height: 400px;
-
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
 }
@@ -381,7 +380,7 @@ label[for="bt_menu"]{
 }
 /* FIM CONTRIBUA */
 
-
+/*ONE PAGE*/
 
 #viagem{
 
@@ -423,3 +422,5 @@ header{
 html{
     scroll-behavior: smooth;
 }
+
+/*FIM ONE PAGE*/
