--- a/views/one.ejs
+++ b/views/one.ejs
@@ -10,23 +10,22 @@
 </head>
 
 <body>
-    <section>
-        <header>
+    <header>
 
-            <!-- BARRA COMPARTILHADA -->
-            <%- include('./partials/header3') %>
-                <!-- FIM BARRA COMPARTILHADA -->
+        <!-- BARRA COMPARTILHADA -->
+        <%- include('./partials/header3') %>
+            <!-- FIM BARRA COMPARTILHADA -->
 
-                <!--<ul>
-                <li><a href="#home">Home</a> </li>
-                <li><a href="#about">About</a> </li>
-                <li><a href="#product">Produto</a> </li>
-                <li><a href="#price">Price</a> </li>
-            </ul>
-            -->
-        </header>
- 
-    <h1>EU</h1>
+            <!--<ul>
+            <li><a href="#home">Home</a> </li>
+            <li><a href="#about">About</a> </li>
+            <li><a href="#product">Produto</a> </li>
+            <li><a href="#price">Price</a> </li>
+        </ul>
+        -->
+    </header>
+    <section id="home">
+        
 
         <!--HOME-->
 
@@ -310,56 +309,7 @@
 
 
 </section>
-<section id="presentes">
 
-    <!--PRESENTES-->
-
-    <body id="fundoPresentes">
-        <!-- CONTEUDO DA DIREITA -->
-        <aside class="rightSide">
-
-            <img class="iconMsg" src="/icon/msg.png">
-
-        </aside>
-        <!-- FIM DO CONTEUDO DA DIREITA-->
-
-        <!-- CONTEUDO CENTRAL-->
-        <div>
-
-            <h1>Lista</h1>
-
-            <table class="tabela">
-
-                <tr>
-                    <th>Item</th>
-                    <th>Preço</th>
-                    <th>Descrição</th>
-                    <th>Foto</th>
-                </tr>
-                <tr>
-                    <td>Carro</td>
-                    <td>R$ 1.500.000,00</td>
-                    <td>Ferrari</td>
-                    <td><img class="gift" src="/img/ferrari2.jpg"></td>
-                </tr>
-            </table>
-
-
-        </div>
-        <!-- FIM CONTEUDO CENTRAL-->
-
-
-    </body>
-    <!-- FIM DO BODY -->
-
-    </html>
-    <!-- FIM HTML -->
-
-
-
-    <!--FIM PRESENTES-->
-
-</section>
 <section id="padrinho">
 
     <!--PADRINHOS-->
@@ -630,6 +580,57 @@
     <!-- FIM HTML -->
 
     <!--FIM CONTRIBUA-->
+</section>
+
+<section id="presentes">
+
+    <!--PRESENTES-->
+
+    <body id="fundoPresentes">
+        <!-- CONTEUDO DA DIREITA -->
+        <aside class="rightSide">
+
+            <img class="iconMsg" src="/icon/msg.png">
+
+        </aside>
+        <!-- FIM DO CONTEUDO DA DIREITA-->
+
+        <!-- CONTEUDO CENTRAL-->
+        <div>
+
+            <h1>Lista</h1>
+
+            <table class="tabela">
+
+                <tr>
+                    <th>Item</th>
+                    <th>Preço</th>
+                    <th>Descrição</th>
+                    <th>Foto</th>
+                </tr>
+                <tr>
+                    <td>Carro</td>
+                    <td>R$ 1.500.000,00</td>
+                    <td>Ferrari</td>
+                    <td><img class="gift" src="/img/ferrari2.jpg"></td>
+                </tr>
+            </table>
+
+
+        </div>
+        <!-- FIM CONTEUDO CENTRAL-->
+
+
+    </body>
+    <!-- FIM DO BODY -->
+
+    </html>
+    <!-- FIM HTML -->
+
+
+
+    <!--FIM PRESENTES-->
+
 </section>
 
 
