--- a/views/partials/header3.ejs
+++ b/views/partials/header3.ejs
@@ -3,7 +3,7 @@
 <html lang="en">
    <!-- HEAD -->
   <head>    
-      <link rel="stylesheet" type="text/css" href="/css/newLook.css">
+      <link rel="stylesheet" type="text/css" href="/css/newLook2.css">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -34,9 +34,10 @@
              <li> <a class="btnBarra" href="#">Home</a> </li>
              <li> <a class="btnBarra" href="#viagem">Viagem</a> </li>
              <li> <a class="btnBarra" href="#festa">Festa</a> </li>
-             <li> <a class="btnBarra" href="#presentes">Presentes</a> </li>
              <li> <a class="btnBarra" href="#padrinho">Padrinhos</a> </li>
              <li> <a class="btnBarra" href="#contribua">Contribua</a> </li>
+             <li> <a class="btnBarra" href="#presentes">Presentes</a> </li>
+
          </ul>
      </nav>
       <!-- FIM BOTÕES BARRA -->
