--- a/views/partials/header3.ejs
+++ b/views/partials/header3.ejs
@@ -35,7 +35,7 @@
              <li> <a class="btnBarra" href="#viagem">Viagem</a> </li>
              <li> <a class="btnBarra" href="#festa">Festa</a> </li>
              <li> <a class="btnBarra" href="#padrinho">Padrinhos</a> </li>
-             <li> <a class="btnBarra" href="#contribua">Contribua</a> </li>
+             <li> <a class="btnBarra" href="#convidados">Convidados</a> </li>
              <li> <a class="btnBarra" href="#presentes">Presentes</a> </li>
 
          </ul>
