--- a/views/one.ejs
+++ b/views/one.ejs
@@ -291,7 +291,7 @@
 
             </div>
 
-            <h1>Endereço: Rua XXX</h1>
+            <h2>Endereço: R. Finlândia, 261 - Parque das Nações, Santo André - SP, 09280-090</h2>
 
 
         </div>
@@ -314,6 +314,19 @@
 <section id="padrinho">
 
     <!--PADRINHOS-->
+
+
+
+
+
+
+<!--teste-->
+
+
+
+<!--FIM TESTE-->
+
+
 
     <body id="fundoPadrinhos">
 
@@ -382,9 +395,9 @@
                     <!---->
                     <!---->
                     <div class="card" style="width: 18rem;" id="felipe">
-                        <img src="/img/ruthmarido.jpeg" class="card-img-top" alt="...">
+                        <img src="/img/ronaldo.jpg" class="card-img-top" alt="...">
                         <div class="card-body-1">
-                            <h5 class="card-title">Luiz</h5>
+                            <h5 class="card-title">Ronaldo</h5>
                             <p class="card-text">Escreva sua mensagem aqui ou fale um pouco mais de você</p>
                         </div>
                     </div>
@@ -425,9 +438,9 @@
                     </div>
                     <!---->
                     <div class="card" style="width: 18rem;" id="felipe">
-                        <img src="/img/cintia.jpeg" class="card-img-top" alt="...">
+                        <img src="/img/heart2.jpg" class="card-img-top" alt="...">
                         <div class="card-body-2">
-                            <h5 class="card-title">Cintia</h5>
+                            <h5 class="card-title">Elma</h5>
                             <p class="card-text">Escreva sua mensagem aqui ou fale um pouco mais de você</p>
                         </div>
                     </div>
@@ -443,9 +456,9 @@
                     <!---->
                     <!---->
                     <div class="card" style="width: 18rem;" id="felipe">
-                        <img src="/img/ana.jpeg" class="card-img-top" alt="...">
+                        <img src="/img/heart2.jpg" class="card-img-top" alt="...">
                         <div class="card-body-2">
-                            <h5 class="card-title">Ana</h5>
+                            <h5 class="card-title">Novo</h5>
                             <p class="card-text">Escreva sua mensagem aqui ou fale um pouco mais de você</p>
                         </div>
                     </div>
@@ -461,9 +474,9 @@
                     <!---->
                     <!---->
                     <div class="card" style="width: 18rem;" id="felipe">
-                        <img src="/img/ruth.jpeg" class="card-img-top" alt="...">
+                        <img src="/img/cintia.jpeg" class="card-img-top" alt="...">
                         <div class="card-body-2">
-                            <h5 class="card-title">Ruth</h5>
+                            <h5 class="card-title">Cintia</h5>
                             <p class="card-text">Escreva sua mensagem aqui ou fale um pouco mais de você</p>
                         </div>
                     </div>
